--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
   <body>
     <h1>REAL TIME VALIDATION USING JS</h1>
 
-    <hr />
+    <hr style="margin-bottom: 100px" />
 
     <form id="loginForm" onsubmit="validate(event)">
       <fieldset>
